--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^4.8.6",
     "morgan": "~1.9.0",
     "nodemailer": "^3.1.5",
+    "ot": "git+https://github.com/operational-transformation/ot.js.git",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
