--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.5",
-    "socket.io": "^1.7.3"
+    "socket.io": "^1.7.3",
+    "typed.js": "^2.0.6"
   }
 }
